# page-analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer.yaml
page_analyzer/: app.py  db.py  parser.py  utils.py
page_analyzer/templates/: base.html  header.html  index.html  layout.html  main_page.html  messages.html  not_found.html  show.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
